--- a/index.html
+++ b/index.html
@@ -5790,6 +5790,13 @@ const tsCalc = {
         positionType: 'long'
     },
     
+    toggleModal: function(show) {
+        if (show) {
+            this.elements.modalContainer.classList.remove('hidden');
+        } else {
+            this.elements.modalContainer.classList.add('hidden');
+        }
+    },
     recalculate: function() {
         this.state.walletBalance = parseFloat(this.elements.walletBalance.value) || 0;
         this.state.leverage = parseFloat(this.elements.leverage.value) || 20;
