--- a/index.html
+++ b/index.html
@@ -491,6 +491,18 @@
         .mtf-clickable-box:hover {
             background-color: #4b5563; /* Sesuaikan warna hover jika perlu */
         }
+        /* === PERBAIKAN UNTUK INPUT KECIL (TAMBAHKAN INI) === */
+        .input-primary.small-input {
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+           
+        }
+        .input-primary.small-input::-webkit-inner-spin-button,
+        .input-primary.small-input::-webkit-outer-spin-button {
+            -webkit-appearance: none; /* Sembunyikan panah di Chrome/Safari */
+            margin: 0;
+        }
+        /* === AKHIR DARI KODE TAMBAHAN === */
     </style>
 </head>
 <body class="antialiased">
@@ -576,10 +588,10 @@
                                                     <div class="flex items-center justify-between">
                                                         <label for="setting-stoch-rsi-period" class="text-gray-500">Stoch RSI (RSI/Stoch/K/D)</label>
                                                         <div class="flex gap-1">
-                                                            <input type="number" id="setting-stoch-rsi-period" class="input-primary !w-12 text-center" value="14">
-                                                            <input type="number" id="setting-stoch-stoch-period" class="input-primary !w-12 text-center" value="14">
-                                                            <input type="number" id="setting-stoch-k-smooth" class="input-primary !w-12 text-center" value="3">
-                                                            <input type="number" id="setting-stoch-d-smooth" class="input-primary !w-12 text-center" value="3">
+                                                            <input type="number" id="setting-stoch-rsi-period" class="input-primary !w-12 text-center small-input" value="14">
+                                                            <input type="number" id="setting-stoch-stoch-period" class="input-primary !w-12 text-center small-input" value="14">
+                                                            <input type="number" id="setting-stoch-k-smooth" class="input-primary !w-12 text-center small-input" value="3">
+                                                            <input type="number" id="setting-stoch-d-smooth" class="input-primary !w-12 text-center small-input" value="3">
                                                         </div>
                                                     </div>
                                                     <div class="flex items-center justify-between"><label for="setting-macd-fast" class="text-gray-500">MACD Fast/Slow/Signal</label><div class="flex gap-1"><input type="number" id="setting-macd-fast" class="input-primary !w-16 text-center" value="12"><input type="number" id="setting-macd-slow" class="input-primary !w-16 text-center" value="26"><input type="number" id="setting-macd-signal" class="input-primary !w-16 text-center" value="9"></div></div>
