--- a/about.html
+++ b/about.html
@@ -529,39 +529,43 @@
                     <div id="backtesting-content-wrapper" class="collapsible-content">
                         <div class="pt-4 mt-4 border-t border-gray-200 dark:border-gray-700 space-y-6">
 
-                            <div class="grid grid-cols-1 md:grid-cols-6 gap-4 items-end">
-    <div>
-        <label for="backtest-symbol-input" class="block text-sm font-medium text-gray-400">Simbol Aset</label>
-        <input type="text" id="backtest-symbol-input" value="BTCUSDT" class="input-primary uppercase mt-1">
-    </div>
-    <div>
-        <label for="backtest-start-date" class="block text-sm font-medium text-gray-400">Tanggal Mulai</label>
-        <input type="date" id="backtest-start-date" class="input-primary mt-1">
-    </div>
-    <div>
-        <label for="backtest-end-date" class="block text-sm font-medium text-gray-400">Tanggal Selesai</label>
-        <input type="date" id="backtest-end-date" class="input-primary mt-1">
-    </div>
-    <div>
-        <label for="backtest-timeframe-select" class="block text-sm font-medium text-gray-400">Timeframe</label>
-        <select id="backtest-timeframe-select" class="input-primary mt-1">
-            <option value="15m" selected>15m</option>
-            <option value="1h">1h</option>
-            <option value="4h">4h</option>
-            <option value="1d">1d</option>
-        </select>
-    </div>
-    <div>
-        <label for="backtest-initial-balance" class="block text-sm font-medium text-gray-400">Modal Awal ($)</label>
-        <input type="number" id="backtest-initial-balance" value="1000" class="input-primary small-input mt-1">
-    </div>
-    <button id="start-backtest-btn" class="btn-primary w-full">
-        <span>▶️ Mulai Simulasi</span>
-        <div class="loader w-5 h-5 hidden">
-            <div class="dot"></div><div class="dot"></div><div class="dot"></div>
-        </div>
-    </button>
-</div>
+                            <div class="grid grid-cols-1 md:grid-cols-7 gap-4 items-end">
+                                <div>
+                                    <label for="backtest-symbol-input" class="block text-sm font-medium text-gray-400">Simbol Aset</label>
+                                    <input type="text" id="backtest-symbol-input" value="BTCUSDT" class="input-primary uppercase mt-1">
+                                </div>
+                                <div>
+                                    <label for="backtest-start-date" class="block text-sm font-medium text-gray-400">Tanggal Mulai</label>
+                                    <input type="date" id="backtest-start-date" class="input-primary mt-1">
+                                </div>
+                                <div>
+                                    <label for="backtest-end-date" class="block text-sm font-medium text-gray-400">Tanggal Selesai</label>
+                                    <input type="date" id="backtest-end-date" class="input-primary mt-1">
+                                </div>
+                                <div>
+                                    <label for="backtest-timeframe-select" class="block text-sm font-medium text-gray-400">Timeframe</label>
+                                    <select id="backtest-timeframe-select" class="input-primary mt-1">
+                                        <option value="15m">15m</option>
+                                        <option value="1h" selected>1h</option>
+                                        <option value="4h">4h</option>
+                                        <option value="1d">1d</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label for="backtest-initial-balance" class="block text-sm font-medium text-gray-400">Modal Awal ($)</label>
+                                    <input type="number" id="backtest-initial-balance" value="1000" class="input-primary small-input mt-1">
+                                </div>
+                                <div>
+                                    <label for="backtest-leverage-input" class="block text-sm font-medium text-gray-400">Leverage</label>
+                                    <input type="number" id="backtest-leverage-input" value="10" class="input-primary small-input mt-1">
+                                </div>
+                                <button id="start-backtest-btn" class="btn-primary w-full">
+                                    <span>▶️ Mulai Simulasi</span>
+                                    <div class="loader w-5 h-5 hidden">
+                                        <div class="dot"></div><div class="dot"></div><div class="dot"></div>
+                                    </div>
+                                </button>
+                            </div>
 
                             <div id="backtest-progress-container" class="hidden">
                                 <p id="backtest-status-text" class="text-center text-sm text-yellow-400 mb-2">Mengambil data...</p>
@@ -590,7 +594,28 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <div id="backtest-logbook-container" class="hidden mt-8">
+                                <div class="flex justify-between items-center mb-2">
+                                    <h4 class="font-semibold text-gray-400">📖 Logbook Pengujian</h4>
+                                    <button id="clear-logbook-btn" class="btn-secondary !text-xs !py-1 !px-2">Hapus Riwayat</button>
+                                </div>
+                                <div class="overflow-x-auto">
+                                    <table class="min-w-full text-sm text-left text-gray-400">
+                                        <thead class="text-xs text-gray-400 uppercase bg-gray-700/50">
+                                            <tr>
+                                                <th scope="col" class="px-4 py-2">Aset</th>
+                                                <th scope="col" class="px-4 py-2">TF</th>
+                                                <th scope="col" class="px-4 py-2">PNL (%)</th>
+                                                <th scope="col" class="px-4 py-2">Win Rate</th>
+                                                <th scope="col" class="px-4 py-2">Profit Factor</th>
+                                                <th scope="col" class="px-4 py-2">Periode</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="logbook-body">
+                                            </tbody>
+                                    </table>
+                                </div>
+                            </div>
                             <div id="backtest-trade-log-container" class="hidden">
                                 <h4 class="font-semibold text-gray-400 mb-2">Riwayat Perdagangan Simulasi</h4>
                                 <div id="backtest-trade-log" class="space-y-2 text-xs max-h-60 overflow-y-auto p-2 bg-gray-900/50 rounded-md">
@@ -600,6 +625,46 @@
                         </div>
                     </div>
                 </section>
+                <section id="strategy-lab-section" class="card p-6 mt-6">
+                <button id="toggle-lab-btn" class="w-full flex justify-between items-center text-left mb-4">
+                    <h2 class="text-xl font-bold">🧪 Strategy Lab & Tuning</h2>
+                    <svg id="toggle-lab-icon" class="w-6 h-6 transition-transform" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                </button>
+
+                <div id="lab-content-wrapper" class="collapsible-content expanded">
+                    <div class="pt-4 mt-4 border-t border-gray-700 space-y-6">
+                        <div>
+                            <h3 class="font-semibold text-lg mb-3">Parameter Eksekusi Scalping</h3>
+                            <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+                                <div>
+                                    <label class="block text-xs text-gray-400">R:R Ratio (TP)</label>
+                                    <input type="number" step="0.1" id="lab-rr-ratio" value="1.5" class="input-primary small-input mt-1">
+                                </div>
+                                <div>
+                                    <label class="block text-xs text-gray-400">EMA Entry</label>
+                                    <input type="number" id="lab-ema-period" value="9" class="input-primary small-input mt-1">
+                                </div>
+                                <div>
+                                    <label class="block text-xs text-gray-400">Swing Lookback (SL)</label>
+                                    <input type="number" id="lab-swing-lookback" value="15" class="input-primary small-input mt-1">
+                                </div>
+                                <div>
+                                    <label class="block text-xs text-gray-400">Bias Threshold (+)</label>
+                                    <input type="number" id="lab-bias-threshold" value="15" class="input-primary small-input mt-1">
+                                </div>
+                            </div>
+                        </div>
+
+                        <details>
+                            <summary class="cursor-pointer text-sm text-gray-400 hover:text-white">
+                                Tuning Bobot Konfluensi (Advanced)
+                            </summary>
+                            <div id="lab-weights-tuning" class="mt-4 pt-4 border-t border-gray-600 grid grid-cols-2 md:grid-cols-4 gap-x-6 gap-y-4">
+                                </div>
+                        </details>
+                    </div>
+                </div>
+            </section>
                 </div>
             </div>
         </div>
