--- a/services.html
+++ b/services.html
@@ -3180,7 +3180,9 @@ async function startEvolution() {
                             population: evolutionState.population, 
                             historicalData: evolutionState.historicalData,
                             fitnessMetric: document.getElementById('optimization-metric-select').value,
-                            timeframe: backtestTimeframeSelect.value
+                            timeframe: backtestTimeframeSelect.value,
+                            isRunning: evolutionState.isRunning, 
+                            settings: backtester.state.settings
                         }
                     });
                 });
