--- a/about.html
+++ b/about.html
@@ -837,8 +837,8 @@
                 if (binanceApiKeys.key && binanceApiKeys.secret) {
                     try {
                         // 1. Ambil data Akun (Balance)
-                        const accountData = await sendBinanceRequest('GET', '/v1/account', true, null);
-                        const positionData = await sendBinanceRequest('GET', '/v1/positionRisk', true, null);
+                        const accountData = await sendBinanceRequest('GET', '/account', true, null);
+                        const positionData = await sendBinanceRequest('GET', '/positionRisk', true, null);
                         // Asumsi: Kita hanya tertarik pada aset USDT
                         const usdtBalance = accountData.assets.find(a => a.asset === 'USDT');
                         
